--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -38,16 +38,11 @@ jobs:
       - name: Run tests
         run: npx npm test -- --coverage
 
-      - name: Run SonarQube scan
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2.3.1
+        with:
+            organization: voltcast-a-ase-project
+            projectKey: shelly
+            projectBaseDir: .
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          npx sonar-scanner \
-            -Dsonar.projectKey=shelly \
-            -Dsonar.organization=voltcast-a-ase-project \
-            -Dsonar.sources=. \
-            -Dsonar.tests=. \
-            -Dsonar.test.inclusions=**/*.spec.js,**/*.test.js \
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
