udpate: sonar version

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -39,6 +39,6 @@ jobs:
         run: npx npm test -- --coverage
 
       - name: SonarCloud Analysis
-        uses: SonarSource/sonarqube-scan-action@v6
+        uses: SonarSource/sonarqube-scan-action@v40f5b61913e891f9d316696628698051136015be
         env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
