--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.4"
   },
   "devDependencies": {
     "jest": "^30.2.0"
