--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=shelly
 sonar.organization=voltcast-a-ase-project
 sonar.sources=.
 sonar.tests=.
-sonar.test.inclusions=**/*.spec.js,**/*.test.js
+sonar.test.inclusions=**/*.spec.js,node_modules/**,**/*.test.js,
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
