--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -16,9 +16,9 @@ jobs:
         working-directory: .
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -38,7 +38,7 @@ jobs:
       - name: Run tests
         run: npx npm test -- --coverage
 
-      - name: SonarCloud Analysis
-        uses: SonarSource/sonarqube-scan-action@40f5b61913e891f9d316696628698051136015be
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
         env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
