--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,12 @@ sonar.projectKey=shelly
 sonar.organization=voltcast-a-ase-project
 sonar.sources=.
 sonar.tests=.
-sonar.test.inclusions=**/*.spec.js,**/*.test.js,
+sonar.test.inclusions=**/*.spec.js,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
+
+sonar.exclusions=node_modules/**,**/*.flow
+
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
