--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,10 @@ sonar.test.inclusions=**/*.spec.js,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
 
-sonar.exclusions=node_modules/**,**/*.flow
+sonar.exclusions=node_modules/**,**/*.flow,coverage/**
+
+sonar.coverage.exclusions=coverage/**
+sonar.cpd.exclusions=coverage/**
 
 sonar.c.file.suffixes=-
 sonar.cpp.file.suffixes=-
