update: sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.test.inclusions=**/*.spec.js,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.host.url=https://sonarcloud.io
 
-sonar.exclusions=node_modules/**,**/*.flow,coverage/**
+sonar.exclusions=node_modules/**,**/*.flow,coverage/**,service.js
 
 sonar.coverage.exclusions=coverage/**
 sonar.cpd.exclusions=coverage/**
