update: sonar properties to exclude mock

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.host.url=https://sonarcloud.io
 
 sonar.exclusions=node_modules/**,**/*.flow,coverage/**,service.js
 
-sonar.coverage.exclusions=coverage/**
+sonar.coverage.exclusions=coverage/**,_mocks_/**
 sonar.cpd.exclusions=coverage/**
 
 sonar.c.file.suffixes=-
