--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "swagger": "node ./swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,9 @@
     "express-validator": "^7.3.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^30.2.0"
