--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shelly",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "service.js",
   "scripts": {
     "test": "jest",
     "test:coverage": "jest --coverage",
