--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "swagger": "node ./swagger.js"
+    "swagger": "node ./swagger.js",
   },
   "keywords": [],
   "author": "",
